--- a/MVC/Content/Site.css
+++ b/MVC/Content/Site.css
@@ -525,3 +525,74 @@ ul li{
         -webkit-transform: translateY(0px);
     }
 }
+
+.comment-image{
+    width:64px;
+}
+.comment-name{
+    font-weight:bold;
+}
+.comment-replies{
+    font-size:13px;
+}
+.comment-replies .comment-image{
+    width:58px;
+}
+.comment-tools{
+    font-size:10px;
+}
+.comment-tools:hover{
+    cursor:pointer;
+}
+.comment-tools ul li a{
+    font-size:14px;
+}
+@media (min-width:768px) {
+    .comment-image{
+        width:70px;
+    }
+    .comment-name{
+        font-size:16px;
+    }
+    .comment-replies, .comment-replies .comment-name {
+        font-size: 13px;
+    }
+    .comment-replies .comment-image{
+        width:64px;
+    }
+}
+
+.btn-buy{
+    font-size:22px;
+}
+.h-custom-15{
+    height:15%;
+}
+.image-on-cart{
+    width:80px;
+    height:175px;
+}
+.cart td,.cart th{
+    vertical-align:middle;
+}
+.cart th{
+    text-align:center;
+}
+.btn-checkout{
+    font-size:19px;
+    padding: 15px 25px 15px 25px;
+}
+.first-cell{
+    display:none;
+}
+@media (min-width:992px)
+{
+    .first-cell {
+        display: table-cell;
+    }
+}
+.text-total{
+    font-size:18px;
+    color:#ff370a;
+    font-weight:700;
+}
