--- a/MVC/Views/Product/Detail.cshtml
+++ b/MVC/Views/Product/Detail.cshtml
@@ -79,14 +79,14 @@ else
                     <p>Giá bán: <span class="h2 text-danger">giá bán</span></p>
                     <p>Tiết kiệm: </p>
                     <hr />
-                    <a href="#" class="btn btn-link btn-danger bg-warning text-black">Mua ngay</a>
+                    <a href="#" class="btn btn-info text-black btn-buy">Mua ngay</a>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="row pt-5">
-        <div class="col-12 col-lg-8 commment">
+        <div class="col-12 col-lg-8">
             <div class="row p-3 border-dark">
                 <div class="rate-point col-2 align-self-center text-warning px-0 offset-lg-1">
                     3.6 <i class="fas fa-star"></i>
@@ -155,70 +155,147 @@ else
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 offset-lg-1">
+            <div class="row comment-create">
+                <div class="col-12">
                     <textarea style="width:100%" rows="4"></textarea>
                 </div>
-                <div class="w-100"></div>
-                <div class="col-auto offset-lg-11 offset-9 offset-md-10">
+                <div class="col-auto ml-auto">
                     <a href="#" id="btnComment" class="btn btn-secondary">comment</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-11 offset-lg-1">
-                    <div class="row">
-                        <div class="col-2">
-                            <img src="~/Resource/support.png" alt="Alternate Text" class="rounded-circle" width="64px" />
+            <div class="row comment-section text-justify">
+                <div class="col-12">
+                    <div class="row comment">
+                        <div class="col-auto">
+                            <img src="~/Resource/support.png" alt="Alternate Text" class="rounded-circle comment-image d-block" />
                         </div>
-                        <div class="col-10">
+                        <div class="col pl-0 comment-body">
                             <div class="row">
-                                <div class="col-12 name">
+                                <div class="col-12 comment-name">
                                     <span>dfghdfgdf</span>
                                 </div>
-                                <div class="col-12">
+                                <div class="col-12 comment-text">
                                     <p>sdfhsdfgjfkjshkjscnvjcvn nkxcjvnksn kdjfn kjn kjdfg kjsjf s dfg d dfg s</p>
                                 </div>
-                                <div class="col-12">
-                                    <a href="#" class="text-decoration-none text-info">reply</a>
+                                <div class="col-12 comment-tools">
+                                    <ul class="p-0">
+                                        <li class="d-inline-block"><i class="fa fa-clock-o"></i> 13:94 &emsp;</li>
+                                        <li class="d-inline-block"><i class="fa fa-calendar"></i> 04/01/2015 &emsp;</li>
+                                        <li class="d-inline-block"><a href="#" class="text-decoration-none text-info">reply</a></li>
+                                    </ul>
                                 </div>
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img src="#" alt="Alternate Text" />
+                                <div class="col-12 comment-replies">
+                                    <div class="row comment">
+                                        <div class="col-auto">
+                                            <img src="~/Resource/support.png" alt="Alternate Text" class="rounded-circle comment-image d-block" />
+                                        </div>
+                                        <div class="col pl-0 comment-body">
+                                            <div class="row">
+                                                <div class="col-12 comment-name">
+                                                    <span>dfghdfgdf</span>
+                                                </div>
+                                                <div class="col-12 comment-text">
+                                                    <p>sdfhsdfgjfkjshkjscnvjcvn nkxcjvnksn kdjfn kjn kjdfg kjsjf s dfg d dfg s</p>
+                                                </div>
+                                                <div class="col-12 comment-tools">
+                                                    <a href="#" class="text-decoration-none text-info">reply</a>
+                                                </div>
+                                                <div class="col-12 comment-replies">
+
+                                                </div>
+
+                                            </div>
+
+                                        </div>
                                     </div>
-                                    <div class="col-10">
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-lg-4 ">
+            <div class="row">
+                <div class="col-auto mr-auto">
+                    <h3>Liên quan</h3>
+                </div>
+                <div class="col-12">
+                    
+                    <div class="view view-eighth">
+                        
+                        <a href="/Product/Detail/1" class="text-decoration-none text-dark product">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="card border-0">
+                                        <img src="~/Resource/chitiet/1.png" alt="Alternate Text" class="image-on-home m-auto" />
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="card-body p-0">
                                         <div class="row">
-                                            <div class="col-12">
-                                                <span>dfghdfgdf</span>
+                                            <div class="col-12 pt-2 product-name overflow-hidden">
+                                                <p>Ốp lưng siêu xịn xò siêu to khổng lồ bla bla bla bal bla</p>
                                             </div>
-                                            <div class="col-12">
-                                                <p>sdfhsdfgjfkjshkjscnvjcvn nkxcjvnksn kdjfn kjn kfng kksjf s sddf ssdf sd</p>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-12 pt-2 product-price">
+                                                @*@if (item.PromotionPrice != 0)
+                    {
+                        <p>
+                            @item.PromotionPrice <u>đ</u>
+                        </p>
+                    }
+                    else
+                    {
+                        <p>
+                            @item.Price <u>đ</u>
+                        </p>
+                    }*@
+                                                <p>10000 <u>đ</u></p>
                                             </div>
-                                            <div class="col-12">
-                                                <a href="#">reply</a>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-12 pt-2 product-discount">
+                                                @*@if (item.PromotionPrice != 0)
+                    {
+                        <del>
+                            @item.Price <u>đ</u>
+                        </del>
+                    }*@
+                                                <del>12000 <u>đ</u></del>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-12 pt-2 product-rate">
+
                                             </div>
                                         </div>
 
                                     </div>
+
+                                </div>
+                            </div>
+                            
+                            
+                        </a>
+                        <div class="mask">
+                            <div class="row h-custom-40 align-content-end">
+                                <div class="col-auto mx-auto">
+                                    <a href="#" class="add">Add To Cart</a>
+                                </div>
+                            </div>
+                            <div class="row h-custom-15 align-content-center">
+                                <div class="col-auto mx-auto">
+                                    <a href="/Product/Detail/1" class="info">View More</a>
                                 </div>
                             </div>
 
                         </div>
                     </div>
-                </div>
-                <div class="w-100"></div>
-                <div class="col-11 offset-1">
-                    <div class="commentContent">
-                        <p></p>
-                    </div>
-                </div>
-                <div class="w-100"></div>
-
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 ">
-            <div class="row">
-                <div class="col-12 offset-lg-2">
-                    Liên quan
                 </div>
             </div>
         </div>
