--- a/MVC/Views/Shared/_Layout.cshtml
+++ b/MVC/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto topbar">
                     <li class="nav-item" id="HomeBtn"><a class="nav-link" href="/Home/Index">Home</a></li>
-                    <li class="nav-item" id="ProductBtn"><a class="nav-link" href="/Product/Index">Product</a></li>#
+                    <li class="nav-item" id="ProductBtn"><a class="nav-link" href="/Product/Index">Product</a></li>
                     <li class="nav-item" id="DesignBtn"> <a class="nav-link" href="/Design/Index">Design</a></li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
